freemed project changelog

* Thu Dec 28 2000 fforest
  - admin.php added 2 new tables guarantor and payer. the patient record no
    longer need to carry this info around
  - patient.php now using the new tables added above.
  - generate_fixed_forms using sql joins to get payirecs and procrecs together.
    changed billing to use a payer type selected from the menu. only bills for
    this payer type will generate. revoced the code for invoice. no longer
    needed.

  - took a few commits to get things working with the new webtools stuff.
  - freemed_auth_login needed global $sql 

* Thu Dec 28 2000 rufustfirefly
  - rehauling db layer today. i think everything that could have been broken
    is now *being* broken. using phpwebtools sql class now.
  - moved index.php3 -> index.php
  - moved manage_payment_records.php3 -> manage_payment_records.php
  - moved call-in.php3 -> call-in.php
  - moved cptmod.php3 -> modules/cpt_modifiers.module.php
  - moved patient_image_handler.php3 -> patient_image_handler.php
  - moved internal_service_types.php3 -> internal_service_types.module.php
  - added add() and mod() routines in lib/module_maintenance.php, so that
    maintenance modules can use them instead of reinventing the wheel
  - moved physician.php3 -> modules/provider.module.php
  - moved roomequip.php -> modules/room_equipment.module.php
  - moved phystatus.php3 -> modules/physician_status.module.php
  - moved phygroup.php3 -> modules/physician_groups.module.php
  - moved insurance_modifiers.php3 -> modules/insurance_modifiers.module.php
  - moved all modules/physician_* to modules/provider_* with language changes
  - moved degrees.php3 -> modules/provider_certifications.module.php
  - moved specialties.php -> modules/provider_specialties.module.php

* Wed Dec 27 2000 rufustfirefly
  - started to convert Rx.php3 -> modules/prescription.module.php
  - modified EMR core module to check for access to current patient